--- a/m3u_editor/Dockerfile
+++ b/m3u_editor/Dockerfile
@@ -1,7 +1,6 @@
-ARG BUILD_FROM=ghcr.io/hassio-addons/base:14.3.2
-FROM ${BUILD_FROM}
+FROM sparkison/m3u-editor:latest
 
 COPY run.sh /run.sh
 RUN chmod +x /run.sh
 
-CMD ["/run.sh"]
+ENTRYPOINT [ "/run.sh" ]
