--- a/.github/workflows/build-m3u-editor.yml
+++ b/.github/workflows/build-m3u-editor.yml
@@ -28,10 +28,15 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Get lowercase username
+        id: getuser
+        run: |
+          echo "owner_lc=${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_OUTPUT
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./m3u_editor
           push: true
-          tags: ghcr.io/${{ github.repository_owner.toLowerCase() }}/m3u-editor:latest
+          tags: ghcr.io/${{ steps.getuser.outputs.owner_lc }}/m3u-editor:latest
           platforms: linux/amd64,linux/arm64,linux/arm/v7
