--- a/dispatcharr/config.json
+++ b/dispatcharr/config.json
@@ -5,8 +5,8 @@
   "version": "0.4.1",
   "startup": "services",
   "boot": "auto",
-  "image": "ghcr.io/dispatcharr/dispatcharr",
-  "url": "https://github.com/Dispatcharr/Dispatcharr",
+  "image": "ghcr.io/lemehdi0/dispatcharr:latest"
+  "url": "https://github.com/LeMehdi0/Dispatcharr"
   "arch": [
     "aarch64",
     "armv7",
