--- a/m3u_editor/Dockerfile
+++ b/m3u_editor/Dockerfile
@@ -1,5 +1,5 @@
 # tiny HA wrapper – just adds our symlink + option handling
-FROM ghcr.io/lemehdi0/m3u-editor:ha
+FROM ghcr.io/lemehdi0/m3u-editor
 
 # add the HA bootstrap script
 COPY run.sh /run.sh
