--- a/m3u_editor/Dockerfile
+++ b/m3u_editor/Dockerfile
@@ -1,10 +1,15 @@
-# Use your published, HA-friendly image (ha tag or versioned)
-ARG BUILD_FROM=ghcr.io/LeMehdi0/m3u-editor:0.5.8.1
+# 1) Grab your published fork
+FROM ghcr.io/LeMehdi0/m3u-editor:0.5.8.1 AS m3u
+
+# 2) Build the add-on from the official HA base
+ARG BUILD_FROM=ghcr.io/hassio-addons/base:14.3.2
 FROM ${BUILD_FROM}
 
-# Copy in our HA wrapper
+# Copy everything from the m3u stage
+COPY --from=m3u / /
+
+# Copy & make executable your HA wrapper
 COPY run.sh /run.sh
 RUN chmod a+x /run.sh
 
-# Entrypoint will set up /data → /var/www/config and then exec the real start-container
-ENTRYPOINT ["/run.sh"]
+ENTRYPOINT [ "/run.sh" ]
